docker file codes for project translation installation of required app and required commands in django

--- a/rss_feed/Dockerfile
+++ b/rss_feed/Dockerfile
@@ -10,11 +10,13 @@ RUN pip install --upgrade pip
 COPY requirements.txt /code/
 
 RUN pip install -r requirements.txt
-
+RUN apt-get update && apt-get install -y gettext
 COPY . /code/
 
 EXPOSE 8000
 
-CMD python manage.py makemigrations --noinput && \
+CMD python manage.py makemessages --all && \
+    python manage.py compilemessages && \
+    python manage.py makemigrations --noinput && \
     python manage.py migrate --noinput && \
     python manage.py runserver 0.0.0.0:8000
