--- a/rss_feed/docker-compose.yml
+++ b/rss_feed/docker-compose.yml
@@ -1,6 +1,19 @@
 version: "3.8"
 
 services:
+    rabbitmq:
+        container_name: rabbitmq
+        image: rabbitmq:3-alpine
+        networks:
+            - main
+        volumes:
+            - rabbitmq_data:/var/lib/rabbitmq
+            - rabbitmq_log:/var/log/rabbitmq
+        restart: always
+        ports:
+            - 5672:5672
+            - 15672:15672
+
     django:
         build: .
         container_name: django
