--- a/rss_feed/docker-compose.yml
+++ b/rss_feed/docker-compose.yml
@@ -14,6 +14,27 @@ services:
             - 5672:5672
             - 15672:15672
 
+    
+    postgres:
+        image: postgres:16.0
+        environment:
+            POSTGRES_DB: "rss_feed"
+            POSTGRES_USER: "postgres"
+            POSTGRES_PASSWORD: "MaA98218"
+        ports:
+            - 5432:5432
+        volumes:
+            - pgdata:/var/lib/postgresql/data
+        networks:
+            - main
+
+    redis:
+        image: redis:alpine
+        ports:
+            - 6379:6379
+        networks:
+            - main
+
     django:
         build: .
         container_name: django
