chore: elasticsearch service

--- a/rss_feed/docker-compose.yml
+++ b/rss_feed/docker-compose.yml
@@ -71,14 +71,18 @@ services:
             - django
         restart: always
 
-        environment:
-            POSTGRES_DB: "rss_feed"
-            POSTGRES_USER: "postgres"
-            POSTGRES_PASSWORD: "MaA98218"
-        ports:
-            - 5432:5432
+    elasticsearch:
+        image: elasticsearch:7.17.3
+        container_name: elasticsearch
+        mem_limit: 512m
         volumes:
-            - pgdata:/var/lib/postgresql/data
+            - elasticsearch_data:/usr/share/elasticsearch/data
+        environment:
+            discovery.type: single-node
+            ES_JAVA_OPTS: -Xms512m -Xmx512m
+            xpack.security.enabled: 'false'
+        ports:
+            - 9200:9200
         networks:
             - main
     redis:
