--- a/rss_feed/docker-compose.yml
+++ b/rss_feed/docker-compose.yml
@@ -85,12 +85,18 @@ services:
             - 9200:9200
         networks:
             - main
-    redis:
-        image: "redis:alpine"
+    kibana:
+        image: kibana:7.17.3
+        container_name: kibana
         ports:
-            - 6379:6379
+            - 5601:5601
+        depends_on:
+            - elasticsearch
         networks:
             - main
+        restart: always
+        volumes:
+            - kibana_data:/usr/share/kibana/data
 networks:
     main:
 volumes:
